2017-09-01  Filip Pizlo  <fpizlo@apple.com>

        [WSL] Add tests for storing to arrays
        https://bugs.webkit.org/show_bug.cgi?id=176237

        Reviewed by Myles Maxfield.
        
        Storing to arrays works now.

        * WebGPUShadingLanguageRI/ArrayType.js:
        (ArrayType):
        * WebGPUShadingLanguageRI/Test.js:
        (TEST_threadArrayStore):
        (TEST_deviceArrayStore):

2017-09-01  Alex Christensen  <achristensen@webkit.org>

        Replace WKUIDelegatePrivate's isPlayingMediaDidChange with KVO _isPlayingAudio on WKWebView
        https://bugs.webkit.org/show_bug.cgi?id=176212

        Reviewed by Tim Horton.

        * TestWebKitAPI/Tests/WebKitCocoa/UIDelegate.mm:
        (-[AudioObserver observeValueForKeyPath:ofObject:change:context:]):
        (TEST):
        (-[MediaDelegate _webView:isPlayingMediaDidChange:]): Deleted.

2017-09-01  Filip Pizlo  <fpizlo@apple.com>

        WSL Rewriter should be an identity on things that aren't inside function bodies
        https://bugs.webkit.org/show_bug.cgi?id=176208

        Reviewed by Myles Maxfield.
        
        Previously, if the Rewriter encountered a FunctionDef, StructType, NativeType, etc., then it
        would either crash or try to rewrite them. That's unfortunate because we use the Rewriter to
        rewrite struct and function bodies. If a function calls another function, then rewriting the
        caller should not mean also rewriting the callee. Previously we "fixed" this by religiously
        wrapping references to types with TypeDef and doing other such hacks. But that's subtly wrong.
        It only worked because Rewriter wasn't rewriting TypeRef.type. I think that Rewriter has to
        rewrite that in the long run because it may refer to another TypeRef, and it may be an
        instantiation that is using types that themselves need to be rewritten.

        * WebGPUShadingLanguageRI/Checker.js:
        (Checker.prototype.visitProtocolDecl.set throw):