@@ -1,3 +1,12 @@
+2017-09-01  Ross Kirsling  <ross.kirsling@sony.com>
+
+        download-latest-github-release.py should have friendlier output for non-404 errors
+        https://bugs.webkit.org/show_bug.cgi?id=176201
+
+        Reviewed by Brent Fulgham.
+
+        * Scripts/download-latest-github-release.py:
+
 2017-09-01  Filip Pizlo  <fpizlo@apple.com>
 
         [WSL] Add tests for storing to arrays
